# otentik-authenticator-desktop

./: .eslintignore  .eslintrc  .gitignore  .prettierignore  README.md  index.html  package.json  tailwind.config.cjs  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
.github/workflows/: build-release.yml.example  create-release.yml  publish-artifacts.yml.example  publish.yml  release.yml  test-action.yml
src/: App.tsx  main.css  main.tsx  mocks.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  menu.rs  otp_generator.rs  security.rs  tray_menu.rs
src/components/: AppLogo.tsx  AppMenu.tsx  AuthScreen.tsx  ConfirmDialog.tsx  DialogTransition.tsx  EmptyState.tsx  FormCreate.tsx  ItemSingle.tsx  ItemsList.tsx  LoaderScreen.tsx  LockScreen.tsx  LoginScreen.tsx  MainScren.tsx  MenuButton.tsx  MenuDivider.tsx  OnboardScreen.tsx  ProgressBar.tsx  SearchBar.tsx  ToastMessage.tsx
src/hooks/: useAuth.ts
src/stores/: screenLockStore.ts  stores.ts
src/utils/: array-helpers.ts  helpers.ts  string-helpers.ts  supabase.ts  ui-helpers.ts
supabase/: config.example.toml
supabase/migrations/: 20220816204614_user_profile.sql  20220816204626_collections.sql  20220816204626_vaults.sql
