[package]
name = "app"
version = "0.1.0"
description = "Open Source two factor authenticator"
authors = ["Aris Ripandi <aris@duck.com>"]
license = "Apache-2.0"
repository = "https://github.com/feelantera/otentik-authenticator-desktop"
default-run = "app"
edition = "2021"
rust-version = "1.63"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.5", features = ["api-all", "system-tray"] }
libreauth = { version = "^0.15", features = ["key", "oath", "pass"] }
cocoa = "0.24.0"
window-vibrancy = "0.2.0"
window-shadows = "0.2.0"

[dependencies.tauri-plugin-store]
git = "https://github.com/tauri-apps/tauri-plugin-store"
branch = "dev"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
